--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     padding: 40px 0;
     font-family: "Titillium Web", sans-serif;
     /* font-family: "Oswald", sans-serif; */
-    background: #2A2D34;
+    background: #342a2a;
 }
 
 section {
@@ -66,11 +66,19 @@ h2 {
     padding: 0;
 }
 
-table{
+#number2 img {
+    width: 300px;
+    height: 400px;
+}
+
+table {
     margin-top: 30px;
 }
 
-table, tr, td, th{
+table,
+tr,
+td,
+th {
     padding: 10px;
     color: #fff;
     border: 1px solid gray;
@@ -201,7 +209,7 @@ button:hover {
     h1 {
         font-size: 28px;
     }
-    
+
 
     .social-links {
         flex-wrap: wrap;
@@ -233,16 +241,17 @@ button:hover {
         color: var(--secondary-color);
         font-weight: 400;
     }
+
     h3 {
         font-size: 18px;
         color: #e2e2e2;
     }
-    
-    section{
+
+    section {
         width: 90%;
     }
-    
-    pre{
+
+    pre {
         width: 84%;
     }
 
@@ -253,7 +262,7 @@ button:hover {
 }
 
 
-.cont-menu{
+.cont-menu {
     position: absolute;
     top: 0;
     z-index: 20;
@@ -266,7 +275,7 @@ button:hover {
 }
 
 
-.cont-menu ul{
+.cont-menu ul {
     width: 70%;
     background: #2a2d34fa;
     position: absolute;
@@ -274,22 +283,24 @@ button:hover {
     right: -110%;
     z-index: 1;
     padding-right: 20px;
-    top:-40px;
+    top: -40px;
     padding-top: 100px;
     transition: .8s;
 }
-.cont-menu li{
+
+.cont-menu li {
     list-style: none;
 }
 
-.cont-menu ul.active{
+.cont-menu ul.active {
     right: 0
 }
-.cont-menu ul li h3{
+
+.cont-menu ul li h3 {
     padding-right: 36px;
 }
 
-.cont-menu li button{
+.cont-menu li button {
     background: transparent;
     color: #fff;
     text-align: right;
@@ -298,11 +309,12 @@ button:hover {
     border-bottom: 1px solid #424242;
     border-radius: 0;
 }
-.cont-menu li button:hover{
+
+.cont-menu li button:hover {
     color: var(--primary-color);
 }
 
-.cont-menu .btn-menu{
+.cont-menu .btn-menu {
     background: #2a2d34;
     position: relative;
     z-index: 10;
@@ -310,4 +322,32 @@ button:hover {
     border-radius: 20px;
     padding: 12px 18.3px;
     pointer-events: all;
+}
+
+#ul-btns {
+    max-height: 300px;
+    /* Ajusta este valor al alto que quieres para el menú visible */
+    overflow-y: auto;
+    /* Activa scroll vertical cuando el contenido excede max-height */
+    background-color: #2a2d34;
+    /* Fondo para el menú, opcional */
+    color: white;
+    padding: 10px;
+    margin: 0;
+    list-style: none;
+    position: absolute;
+    /* Si quieres que se superponga */
+    width: 250px;
+    /* Ajusta ancho según tu diseño */
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    display: none;
+    /* Inicialmente oculto */
+    z-index: 100;
+    /* Que esté encima de otros elementos */
+}
+
+#ul-btns.active {
+    display: block;
+    /* Mostrar cuando tiene clase active */
 }
