--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 
 :root {
-    --primary-color: #f7e018;
+    --primary-color: #f82a2a;
     --secondary-color: #ffffff;
 }
 
@@ -13,7 +13,7 @@ body {
     padding: 40px 0;
     font-family: "Titillium Web", sans-serif;
     /* font-family: "Oswald", sans-serif; */
-    background: #342a2a;
+    background: #160c0c;
 }
 
 section {
